Håndtere tilfelle hvor søker oppgir seg selv som annen part